RegressionTests/TestSuiteExport/reject/inline_asm_empty_instruction.blade
// EXPECT: fail
// DIAGNOSTICS: E0301

fn f() void {
    asm {
        IF_C
    };
}